# package-demo

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
.github/workflows/: main.yml  publish.yaml
my_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
package/: file.py
package/my_folder/: my_nested_file.py
