[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>61.0.0", "wheel"]  # PEP 508 specifications.


[project]
name = "my_package"
authors = [
    {name = "Josiah Carberry", email = "josiah_carberry@brown.edu"},
]
description = "My package description"
requires-python = ">=3.6"
license = {text = "MIT"}

dependencies = [
    "numpy",
    'importlib-metadata; python_version<"3.8"',
]
# dynamic = ["version"]
version ="0.0.0"

