[metadata]
name = my_package
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A small example package
url = https://github.com/yourusername/my_package

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[tool.ruff]
line-length = 88
exclude = [
  'build/',
  'dist/'
]
select = [
  'E501',  # line too long
  'F401'   # module imported but unused
]
